tests/expectations/compiler/structs/inline_fail.out
Error [ETYC0372013]: Composite initialization expression for `Foo` is missing member `x`.
    --> compiler-test:9:22
     |
   9 |         let a: Foo = Foo { y: 0u32 };
     |                      ^^^^^^^^^^^^^^^
